<resources>
    <string name="app_name">BaiduMapSDKExample</string>
    <string name="demo_name_main">百度地图示例中心</string>

    <string name="normal_map">普通地图</string>
    <string name="satellite_map">卫星图</string>

    <!-- 字体 -->
    <string name="PingFang_SC_Medium">PingFang-SC-Medium</string>
    <string name="PingFangSC_Regular">PingFangSC-Regular</string>
    <string name="PingFangSC_Semibold">PingFangSC-Semibold</string>

    <!-- 地图选点 -->
    <string name="set_end_point">选择该点</string>

    <!-- marker缩放 -->
    <string name="pause_animation">暂停动画</string>
    <string name="resume_animation">恢复动画</string>
    <string name="remove_animation">移除动画</string>
    <string name="add_animation">添加动画</string>

    <!-- 建议检索 -->
    <string name="in">在</string>
    <string name="search">市内找</string>
    <string name="defaultCity">北京</string>
    <string name="search_poi">检索</string>

    <!-- 个性化地图 -->
    <string name="black_map">夜</string>
    <string name="white_map">昼</string>
    <string name="close_custom">关闭个性化</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- 手势 -->
    <string name="standard_map">标准地图</string>
    <string name="statellite_map">卫星地图</string>
    <string name="nont_map">空白地图</string>
</resources>
