<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:background="@color/color_layout">
        <Button
            android:id="@+id/white_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/white_map"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp15"
            android:background="@drawable/custom_map_btn_press"/>
        <Button
            android:id="@+id/black_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/black_map"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@drawable/custom_map_btn_press"/>
        <Button
            android:id="@+id/close_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close_custom"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginRight="@dimen/dp15"
            android:background="@drawable/custom_map_btn_press"/>
    </LinearLayout>
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmap_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>