<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mapcontrol.scrollpage.MapScrollActivity">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:theme="@style/AppTheme.AppBarOverlay">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--                android:id="@+id/toolbar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                android:background="?attr/colorPrimary"-->
<!--                app:popupTheme="@style/AppTheme.PopupOverlay" />-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <com.baidu.mapsdkexample.mapcontrol.scrollpage.ScrollViewPager
            android:id="@+id/scroll_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp83"
            android:background="@android:color/transparent">


            <Button
                    android:id="@+id/scroll_btn0"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/white"
                    android:text="@string/standard_map"
                    android:background="@color/action_bar_bg"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp50"/>

            <Button
                    android:id="@+id/scroll_btn1"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/white"
                    android:text="@string/statellite_map"
                    android:background="@color/color_btn"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp50"/>
            <Button
                    android:id="@+id/scroll_btn2"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/white"
                    android:background="@color/color_btn"
                    android:text="@string/nont_map"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp50"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>